update 6 des - kurang unit testing aja

--- a/app/src/main/res/layout/activity_adapter_pesan.xml
+++ b/app/src/main/res/layout/activity_adapter_pesan.xml
@@ -91,7 +91,7 @@
                     android:textSize="14sp" />
 
                 <TextView
-                    android:id="@+id/txtIsiPesan"
+                    android:id="@+id/txtIsiPesanAdapter"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingLeft="10dp"
